owncloud/owncloud-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owncloud
  annotations:
    keel.sh/policy: major
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 4h"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: owncloud
  template:
    metadata:
      labels:
        app: owncloud
    spec:
      containers:
        - name: owncloud
          image: owncloud/server:10.16.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: owncloud-data
              mountPath: /mnt/data
      volumes:
        - name: owncloud-data
          persistentVolumeClaim:
            claimName: owncloud-data
