owncloud/owncloud-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: owncloud
spec:
  selector:
    app: owncloud
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
